--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 dotenv = "0.15.0"
 lambda_runtime = "0.13.0"
 openssl = { version = "0.10.68", features = ["vendored"] }
+rand = "0.8.5"
 reqwest =  { version = "0.12.9", features = ["json"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
